# albert-api-client-playground

./: .gitignore  README.md  env.example
python/: README.md  albert_api.py  datasets.json  main.py  prompts.json  pyproject.toml  test.py  test_short-description_prompts.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: albert-api.ts  index.ts  test.ts
